# morpheus

./: .gitignore  Makefile  README.md  pubspec.yaml  requirements.txt
30.04.2024/: README.md
30.04.2024/api/: .gitignore  Makefile  README.md  api.py  localhost+2-key.pem  localhost+2.pem  requirements.txt
30.04.2024/mobile-app/: README.md  pubspec.yaml
android/app/: build.gradle
api/: api.py  key  utils.py
api/frontprocessor/: front_processor.py
documents/: presentation-du-projet.pptx
documents/pid-2/: pid.odp  pid.pptx
documents/rendu-1/: pid.docx
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/assets/: config_assets.dart  image_assets.dart
lib/components/: app_button.dart  app_checkbox.dart  app_input.dart  tutorial_step.dart
lib/pages/: home.dart  login.dart  page_model.dart  record.dart  result.dart
lib/style-config/: app_theme.dart
mediaPipeS1/landmarksPhotoEstimated1/: photo.py
morpheus/: README.md  pubspec.yaml
morpheus/android/: build.gradle
morpheus/lib/: main.dart
morpheus/linux/: CMakeLists.txt  my_application.cc
morpheus/test/: widget_test.dart
morpheus/web/: index.html  manifest.json
morpheus/windows/: CMakeLists.txt
test/: widget_test.dart
tests-de-decouverte/test-yahaya/: .gitignore  CMakeLists.txt  CameraDistanceCalculator.cpp  CameraDistanceCalculator.hpp  Neuron.cpp  Neuron.hpp  OpenCvHelper.cpp  OpenCvHelper.hpp  README.md  main.cpp  vcpkg.json
tests-de-decouverte/test-yahaya/resources/: images.txt
treatment/: custom_exception.py  detector.py
(+94 files in other folders)
